// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VMWareProviderStatus /> handles unknown V2VVMWare 1`] = `null`;

exports[`<VMWareProviderStatus /> renders Connecting based on status.phase 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  Checking vCenter Credentials...
  <div
    class="spinner spinner-sm"
  />
</div>
`;

exports[`<VMWareProviderStatus /> renders ConnectionVerified based on status.phase 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  Connection successful
</div>
`;

exports[`<VMWareProviderStatus /> renders Failed based on status.phase 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  <div
    class="alert alert-warning"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-warning-triangle-o"
    />
    Could not connect to vCenter using the provided credentials.
  </div>
</div>
`;

exports[`<VMWareProviderStatus /> renders LoadingVmDetail based on status.phase 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  Connection successful. Loading data...
  <div
    class="spinner spinner-sm"
  />
</div>
`;

exports[`<VMWareProviderStatus /> renders LoadingVmDetailFailed based on status.phase 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  <div
    class="alert alert-warning"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-warning-triangle-o"
    />
    Connection succeeded but could not read details of the virtual machine from the vCenter instance.
  </div>
</div>
`;

exports[`<VMWareProviderStatus /> renders LoadingVmsList based on status.phase 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  Connection successful. Loading data...
  <div
    class="spinner spinner-sm"
  />
</div>
`;

exports[`<VMWareProviderStatus /> renders PROVIDER_STATUS_CONNECTING 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  Connection successful
</div>
`;

exports[`<VMWareProviderStatus /> renders PROVIDER_STATUS_CONNECTION_FAILED 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  <div
    class="alert alert-warning"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-warning-triangle-o"
    />
    Can not verify vCenter credentials, connection to the V2V VMWare failed.
  </div>
</div>
`;

exports[`<VMWareProviderStatus /> renders PROVIDER_STATUS_SUCCESS 1`] = `
<div
  class="kubevirt-create-vm-wizard__import-vmware-connection-status"
>
  Connection successful
</div>
`;
